<project>
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.epam.jmp.tabayeu</groupId>
  <artifactId>jmp-web</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <packaging>war</packaging>
  <name>jmp-web</name>

  <properties>
    <spring.framework.version>3.2.6.RELEASE</spring.framework.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>  <!-- Allows reusing of existing jacoco's report files -->
	<sonar.java.codeCoveragePlugin>jacoco</sonar.java.codeCoveragePlugin>
	<sonar.surefire.reportsPath>/target/surefire-reports</sonar.surefire.reportsPath>
	<sonar.jacoco.reportPath>target/jacoco.exec</sonar.jacoco.reportPath>    <!-- Path of Jacoco's report file for unit tests -->
	<sonar.jacoco.itReportPath>D:/tools-vehicle-sales-transactions/target/jacoco-it.exec</sonar.jacoco.itReportPath> <!-- Path of Jacoco's report file for integration tests. Change it to appropriate path. -->
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
	<dependency>
		<groupId>org.testng</groupId>
		<artifactId>testng</artifactId>
		<version>6.9.10</version>
	</dependency>
    <!-- Servlet dependency -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.framework.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${spring.framework.version}</version>
        </dependency>
        
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${spring.framework.version}</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-json-jackson</artifactId>
            <version>${jersey.version}</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.ext</groupId>
            <artifactId>jersey-spring3</artifactId>
            <version>${jersey.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>


        <!-- Project dependency. -->
        <dependency>
            <groupId>com.epam.jmp.tabayeu</groupId>
            <artifactId>jmp-service</artifactId>
			<version>0.0.1-SNAPSHOT</version>
        </dependency>
	
  </dependencies>
  
  
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>
      <plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-surefire-plugin</artifactId>
		    <version>2.9</version>
		    <configuration>
		        <argLine>-Xmx100M -XX:MaxPermSize=512k -XX:-UseGCOverheadLimit</argLine>
		    </configuration>
		</plugin>
        <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-war-plugin</artifactId>
               <version>2.6</version>
               <configuration>
                   <webResources>
<!--                        <webResource> -->
<!--                            <directory>${basedir}/src/main/webapp/WEB-INF</directory> -->
<!--                            <includes> -->
<!--                                <include>web.xml</include> -->
<!--                            </includes> -->
<!--                            <targetPath>WEB-INF</targetPath> -->
<!--                            <filtering>true</filtering> -->
<!--                        </webResource> -->
<!--                        <webResource> -->
<!--                            <directory>${basedir}/src/main/webapp</directory> -->
<!--                            <includes> -->
<!--                                <include>resources</include> -->
<!--                                <include>index.html</include> -->
<!--                            </includes> -->
<!--                            <filtering>true</filtering> -->
<!--                        </webResource> -->
                   </webResources>
               </configuration>
           </plugin>
  
	
</plugins>
  </build>
  
</project>
